# ROS_Roboclaw_C-_integration_with_position-control_PID_node

./: CMakeLists.txt  README.md  main.cpp  package.xml  position.msg  ps4controller.py  remote.cpp  remote.h  rover.cpp  rover.h  rover_instructions.txt
dash/: CMakeLists.txt  rover.h
include/rover_manager/: helper.h  remote.h  rover.h
src/: 2020-12-30-16-34-03.bag  Calibration.py  Planner.py  Precv planner.py  TrajectoryFollower.py  UDPSend.py  calibration.txt  calibration1.txt  calibration2.txt  calibration_tf1.txt  calibration_tf2.txt  follower.cpp  left_controller_following.cpp  main.cpp  myfile.txt  old_follower.cpp  publishrobotframe.cpp  pyPS4Control.py  receiveUDPPose.py  remote.cpp  rover.cpp  rrt.py  simulateRemote.py  tf_publisher.cpp  tf_tools.cpp
src/bags/: motor_enc.bag  motor_enc_1.bag
